remove calls to group autocomplete

--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -75,6 +75,6 @@
 <script src="{% static 'js/components/filterModal/view.js' %}"></script>
 <script src="{% static 'js/components/filterModal/controller.js' %}"></script>
 <script src="{% static 'js/components/themeAutocomplete/view.js' %}"></script>
-<script src="{% static 'js/components/groupAutocomplete/views.js' %}"></script>
+{# <script src="{% static 'js/components/groupAutocomplete/views.js' %}"></script> #}
 <script src="{% static 'js/pages/inviteParticipants.js' %}"></script>
 {% endblock page_js %}
