Create dashboard groups (#99)
* Create dashboard groups

* Flake 8

* create app dashboard

* Fix scroll horizontal

* create thematic groups views

* add object list in group.html

* add avatar class in template

* fix navbar links in dashboard

* fix filter modal to apply filters

* fix settings variable js_script_prefix

* Change tools navbar position

* remove groups from urls and template

* remove calls to group autocomplete

* fix lint

--- a/src/templates/components/nav-bar.html
+++ b/src/templates/components/nav-bar.html
@@ -1,10 +1,10 @@
-<div class="nav-bar {% if is_owner %} -admin{% endif %}">
+{% load dashboard_tags %}
+<div class="nav-bar {% if request.user.profile.profile_type == 'owner' %} -admin{% endif %}">
   <div class="nav-burger"></div>
   <a href="{% url 'home' %}" class="brand -beta">Wikilegis</a>
-  {% if is_owner %}
+  {% if request.user.profile.profile_type == 'owner' %}
   <div class="tools">
-    <a href="#" class="-active">Meus documentos</a>
-    <a href="#">Meus grupos</a>
+    <a href="{% url 'owner_documents' %}" {% if request.path|endswith:'/dashboard/' %}class="-active"{% endif %}>Meus documentos</a>
   </div>
   {% endif %}
 </div>
