--- a/src/static/scss/components/_simple-card.scss
+++ b/src/static/scss/components/_simple-card.scss
@@ -53,6 +53,63 @@
     }
   }
 
+  &.-groups {
+    position: relative;
+
+    overflow: hidden;
+
+    max-height: 20rem;
+
+    & > .header > .participations {
+      color: $color-gray;
+    }
+
+    &::before {
+      position: absolute;
+      z-index: 1;
+      top: calc(100% - 5rem);
+      right: 0;
+      bottom: 0;
+      left: 0;
+
+      content: '';
+      pointer-events: none;
+
+      background: linear-gradient(transparent, #FFF);
+    }
+
+    & > .info {
+      position: relative;
+
+      overflow-x: hidden;
+      overflow-y: auto;
+
+      height: 15rem;
+      margin-top: 0;
+      padding-top: 1rem;
+
+      & > .list {
+        display: flex;
+        flex-direction: column;
+
+        width: 100%;
+        height: 100%;
+
+        & > .user-profile {
+          flex: 1 0 auto;
+
+          width: 100%;
+          padding-right: 0;
+          padding-left: 0;
+
+          &:hover {
+            background-color: #FFF;
+          }
+        }
+      }
+    }
+  }
+
   & > p {
     margin-top: 1rem;
   }
