feature/silegis-importer (#105)
* Add initial addExcerpt component structure

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update text styles

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add editor-articulacao from silegis-mg

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update models to persist versions from excerpt and amendments

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update project_tag to handle numbering without parent

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add version field to InvitedGroup

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update to fetch only latest document version

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Finished html importer

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update DocumentAdmin

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix rebase

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Remove public folder from flake8

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Ignore silegis-mg on eslint

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -15,6 +15,7 @@
 
 // Components
 @import 'components/document-excerpt';
+@import 'components/excerpt-wrapper';
 @import 'components/document-body';
 @import 'components/suggestion-input';
 @import 'components/nav-bar';
