--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -43,12 +43,14 @@
       <p class="description">{{ object.description }}</p>
       <hr>
     </header>
-    {% for excerpt in object.excerpts.all %}
+    {% for excerpt in object.get_excerpts %}
       {% if excerpt.excerpt_type.align_center %}
-      <h3>{% excerpt_numbering excerpt %}</h3>
-      <h3>{{ excerpt.content|safe }}</h3>
+      <div class="excerpt-wrapper {% excerpt_classes excerpt%}">
+        <h3>{% excerpt_numbering excerpt %}</h3>
+        <h3>{{ excerpt.content|safe }}</h3>
+      </div>
       {% else %}
-      <p class="js-excerptWrapper {% if not excerpt.suggestions.all %}-reduce{% endif %}">
+      <p class="excerpt-wrapper {% excerpt_classes excerpt%} {% if not excerpt.suggestions.all %}-reduce{% endif %} js-excerptWrapper">
         <b>{% excerpt_numbering excerpt %}</b>
         {% if not excerpt.suggestions.all %}
         <span class="js-defaultText">...</span>
@@ -57,6 +59,7 @@
       </p>
       {% endif %}
     {% endfor %}
+    <div class="js-textEditor"></div>
   </article>
   {% include "components/tool-bar.html" %}
 </main>
@@ -64,6 +67,7 @@
 {% endblock content %}
 
 {% block page_js %}
+<script src="{% static '/js/vendor/silegismg-editor-articulacao-plain-js.js' %}"></script>
 <script src="{% static 'js/components/reduceExcerpts/view.js' %}"></script>
 <script src="{% static 'js/components/documentSideBar/view.js' %}"></script>
 <script src="{% static 'js/components/clusters/view.js' %}"></script>
