Create project flow

--- a/src/static/scss/components/_document-form.scss
+++ b/src/static/scss/components/_document-form.scss
@@ -2,9 +2,26 @@
   width: 40rem;
   margin: 0 auto;
   padding: 5rem;
+  padding-top: 6rem;
 
   & > .app-button {
     margin-top: 2rem;
     margin-left: auto;
+  }
+
+  & > h2 {
+    font-size: 1.5rem;
+
+    margin-top: 2rem;
+  }
+
+  & > p {
+    font-size: $font-size-centi;
+
+    margin-top: 1rem;
+  }
+
+  & > .input-text {
+    margin-top: 2rem;
   }
 }
