--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -1,3 +1,7 @@
+body.-home .nav-bar {
+  @extend .-shadow;
+}
+
 body.-open-menu .nav-bar {
   background-color: $color-brand;
 
@@ -85,7 +89,6 @@ body.-white .nav-bar {
     &.-beta::after {
       font-size: .5rem;
       font-weight: 900;
-      letter-spacing: 2px;
 
       position: relative;
       right: 1.875rem;
@@ -96,6 +99,7 @@ body.-white .nav-bar {
       width: 0;
 
       content: 'Beta';
+      letter-spacing: 2px;
 
       color: $color-deep-gray;
     }
