Fix dropdown navbar

--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -155,7 +155,7 @@ body.-white .nav-bar {
     border-left: 1px solid $color-grayish;
 
     &:hover {
-      & > .dropdown > .list {
+      & > .menu > .dropdown > .list {
         display: flex;
       }
     }
