--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -155,7 +155,7 @@ body.-white .nav-bar {
     border-left: 1px solid $color-grayish;
 
     &:hover {
-      & > .menu > .dropdown > .list {
+      & > .dropdown > .list {
         display: flex;
       }
     }
@@ -167,52 +167,117 @@ body.-white .nav-bar {
       color: $color-deep-gray;
     }
 
-    & > .menu {
+    & > .dropdown {
+      position: relative;
+
       display: flex;
       display: flex;
+      display: flex;
+      align-items: center;
       align-items: center;
       align-items: center;
 
       margin-top: .25rem;
       margin-right: 1rem;
 
-      & > .participation {
-        font-size: $font-size-micro;
+      cursor: pointer;
+
+      &::after {
+        display: inline-flex;
+
+        width: .75rem;
+        height: .75rem;
+        margin-left: .25rem;
+
+        content: '';
+
+        background-image: url('../../static/img/arrow.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
       }
 
-      & > .dropdown {
-        position: relative;
+      & > span {
+        font-size: $font-size-micro;
 
-        display: flex;
-        align-items: center;
+        &.-closed {
+          @include icon('padlock');
 
-        margin-right: 1rem;
-
-        cursor: pointer;
-
-        &::after {
-          display: inline-flex;
-
-          width: .75rem;
-          height: .75rem;
-          margin-left: .25rem;
-
-          content: '';
-
-          background-image: url('../../static/img/arrow.svg');
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: contain;
+          &::before {
+            margin-right: .25rem;
+          }
         }
+      }
 
-        & > span {
-          font-size: $font-size-micro;
+      & > .list {
+        position: absolute;
+        top: 1.3rem;
+        left: -.2rem;
 
-          &.-closed {
-            @include icon('padlock');
+        display: none;
+        flex-direction: column;
+
+        width: 25rem;
+        padding: .5rem 0;
+
+        border: 1px solid $color-grayish;
+        background-color: #FFF;
+
+        @include card-shadow;
+
+        & > .title {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          padding: .5rem 1.25rem;
+
+          cursor: text;
+
+          & > span {
+            font-size: $font-size-centi;
+            font-weight: bold;
+            line-height: 1.4;
+
+            color: $color-deep-gray;
+
+            &.-closed {
+              @include icon('padlock');
+
+              &::before {
+                font-size: $font-size-micro;
+
+                margin-right: .35rem;
+              }
+            }
+          }
+
+          & > a {
+            font-size: $font-size-micro;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            padding: .5rem 0;
+
+            cursor: pointer;
+            letter-spacing: .5px;
+
+            color: $color-brand;
+
+            &:hover {
+              opacity: .8;
+            }
+          }
+
+          & > .-add {
+            @include icon('add');
 
             &::before {
-              margin-right: .25rem;
+              font-size: $font-size-nano;
+
+              margin-right: .35rem;
             }
           }
         }
