--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -1,14 +1,12 @@
-.document-editor.-active {
+.document-editor.-readonly.-active {
+  width: calc(100% - 29rem);
+
   & > .side-bar {
     transform: translateX(0);
 
     & > .toggle::before {
       transform: rotate(180deg);
     }
-  }
-
-  & > article {
-    transform: translateX(8.5rem);
   }
 }
 
@@ -17,7 +15,10 @@
 
   display: flex;
 
+  width: calc(100% - 5rem);
+  margin-right: 5rem;
   padding: 0;
+  transition: all .25s $swift-out;
 
   &::before {
     position: fixed;
@@ -40,11 +41,10 @@
   & > article {
     font-size: 1rem;
 
+    width: 100%;
     max-width: 66ch;
     margin: 0 auto;
     padding: 2rem 1.6rem 5rem 1.6rem;
-
-    transition: all .25s $swift-out;
 
     & > p {
       position: relative;
@@ -55,6 +55,25 @@
 
       display: flex;
       flex-direction: column;
+
+      &.-editable {
+        & > input {
+          height: auto;
+          padding: 0;
+
+          box-shadow: none;
+
+          &.title {
+            @extend h1;
+
+            margin: 0;
+          }
+
+          &.description {
+            line-height: 1.6;
+          }
+        }
+      }
     }
 
     & > header > hr {
