--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -51,6 +51,7 @@
     {% compress js %}
       <script src="{% static 'django_js_reverse/js/reverse.js' %}"></script>
       <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
+      <script src="{% static 'autosize/dist/autosize.min.js' %}"></script>
       <script src="{% static 'js/utils/publishSubscribe.js' %}"></script>
       <script src="{% static 'js/utils/events.js' %}"></script>
       <script src="{% static 'js/utils/cookies.js' %}"></script>
