--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -18,6 +18,7 @@
   width: calc(100% - 5rem);
   margin-right: 5rem;
   padding: 0;
+
   transition: all .25s $swift-out;
 
   &::before {
@@ -57,8 +58,16 @@
       flex-direction: column;
 
       &.-editable {
-        & > input {
-          height: auto;
+        & > h1 {
+          min-height: 52px;
+        }
+
+        & > .description {
+          min-height: 52px;
+          margin-bottom: 2rem;
+        }
+
+        & > textarea {
           padding: 0;
 
           box-shadow: none;
@@ -72,6 +81,10 @@
           &.description {
             line-height: 1.6;
           }
+        }
+
+        & > hr {
+          margin-top: 0;
         }
       }
     }
