Update title and description on "enter" keypress
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -16,9 +16,9 @@
   <article>
     <header class="-editable js-documentHeader">
       <h1 class="js-title">{{ object.title }}</h1>
-      <textarea name="title" class="title _hidden js-titleInput"></textarea>
+      <textarea name="title" class="title _hidden js-titleInput js-input"></textarea>
       <p class="description js-description">{{ object.description }}</p>
-      <textarea name="description" class="_hidden description js-descriptionInput"></textarea>
+      <textarea name="description" class="_hidden description js-descriptionInput js-input"></textarea>
       <hr>
     </header>
     <div class="js-textEditor"></div>
