--- a/src/templates/components/document-navbar.html
+++ b/src/templates/components/document-navbar.html
@@ -5,18 +5,21 @@
   {% if request.user.profile.profile_type == 'owner' %}
   <div class="project">
     <span class="title js-documentTitle">{{object.title}}</span>
-      {% if object.invited_groups.all %}
       <div class="dropdown">
-      {% if group.public_participation %}
-      <span>Participação pública</span>
+      {% if group %}
+        {% if group.public_participation %}
+        <span>Participação pública</span>
+        {% else %}
+        <span class="-closed">{{group.thematic_group.name}}</span>
+        {% endif %}
       {% else %}
-      <span class="-closed">{{group.thematic_group.name}}</span>
+        <span>Minhas Versões</span>
       {% endif %}
       <ul class="list">
-        <a href="#">
+        <a href="{% url 'document_editor_cluster' 'editor' object.id %}">
           <span>Minhas Versões</span>
           <div class="info">
-            <div class="item -versions">11</div>
+            <div class="item -versions">{{ object.invited_groups.all.count }}</div>
           </div>
         </a>
         <!-- Número de versões -->
@@ -26,32 +29,36 @@
           <a href="#" class="-add">Adicionar</a>
         </div>
         <!-- Criar nova -->
-        {% for invited_group in object.invited_groups.all %}
-          <!-- {% if invited_group.public_participation %}
-          <a href="?group_id={{invited_group.id}}">Participação pública</a>
-          {% else %} -->
-          <a href="?group_id={{invited_group.id}}">
+        {% for invited_group in private_groups %}
+          <a href="{% url 'document_editor_cluster' 'clusters' object.id %}?group_id={{invited_group.id}}">
             <span>{{invited_group.thematic_group.name}}</span>
             <div class="info">
               <div class="item -participants">{{invited_group.thematic_group.participants.count}}</div>
               <div class="item -opinions">{{invited_group.suggestions.count}}</div>
             </div>
           </a>
-          <!-- {% endif %} -->
         {% endfor %}
         <hr>
-        <a href="?group_id={{invited_group.id}}">
+        {% for public_participation in public_group %}
+        <a href="{% url 'document_editor_cluster' 'clusters' object.id %}?group_id={{public_participation.id}}">
+          <span>Participação Pública</span>
+          <div class="info">
+            <div class="item">Em andamento</div>
+          </div>
+        </a>
+        {% empty %}
+        <a href="#">
           <span>Participação Pública</span>
           <div class="info">
             <div class="item">Solicitar</div>
           </div>
         </a>
+        {% endfor %}
         <!-- Solicitar (solicita)-->
         <!-- Aguardando (explica)-->
         <!-- Em andamento (acessa)-->
       </ul>
     </div>
-    {% endif %}
   </div>
   <div class="tools">
     <a href="{% url 'owner_documents' %}" {% if request.path|endswith:'/dashboard/' %}class="-active"{% endif %}>Meus documentos</a>
