Create validate modal

--- a/src/static/scss/components/_app-modal.scss
+++ b/src/static/scss/components/_app-modal.scss
@@ -47,6 +47,14 @@
     }
   }
 
+  &.-validate {
+    height: 100%;
+
+    @include bp-mediumup {
+      display: none !important;
+    }
+  }
+
   &.-onboarding {
     overflow-y: auto;
     align-items: center;
