--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -27,6 +27,8 @@
   {% include "components/tool-bar.html" with pk=object.id %}
 </main>
 
+{% include "components/validate-modal.html" %}
+
 {% endblock content %}
 
 {% block page_js %}
